# sketchbio

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  CTestInput.txt  PQP_CMakeLists.txt  README.md  RenderWindowUI.cxx  SimpleView.cpp  SimpleView.h  SimpleView.ui  SimpleViewUI.cxx  SimpleViewUI.h  animationmode.cpp  animationmode.h  clearsettings.cpp  groupidgenerator.h  hydrainputmanager.cpp  hydrainputmanager.h  hydrainputmode.cpp  hydrainputmode.h  keyframe.cpp  keyframe.h  main.cpp  modelmanager.cpp  modelmanager.h  objecteditingmode.cpp  objecteditingmode.h  physicsstrategy.cpp  physicsstrategy.h  projecttoblenderanimation.cpp  projecttoblenderanimation.h  projecttoxml.cpp  projecttoxml.h  sketchioconstants.h  sketchmodel.cpp  sketchmodel.h  sketchobject.cpp  sketchobject.h  sketchproject.cpp  sketchproject.h  (+15 more)
Core/: CMakeLists.txt  OperationState.h  SettingsHelpers.cpp  SettingsHelpers.h  colormaptype.cpp  colormaptype.h  connector.cpp  connector.h  hand.cpp  hand.h  keyframe.cpp  keyframe.h  measuringtape.cpp  measuringtape.h  modelinstance.cpp  modelinstance.h  modelmanager.cpp  modelmanager.h  modelutilities.cpp  modelutilities.h  objectchangeobserver.h  objectgroup.cpp  objectgroup.h  physicsstrategy.cpp  physicsstrategy.h  physicsstrategyfactory.cpp  physicsstrategyfactory.h  physicsutilities.cpp  physicsutilities.h  sketchioconstants.h  sketchmodel.cpp  sketchmodel.h  sketchobject.cpp  sketchobject.h  sketchproject.cpp  sketchproject.h  sketchtests.h  springconnection.cpp  springconnection.h  structurereplicator.cpp  (+9 more)
Core/test/: CMakeLists.txt  TestCoreHelpers.cxx  TestCoreHelpers.h  TestHand.cxx  TestModelInstance.cxx  TestModelManager.cxx  TestObjectGroup.cxx  TestSketchModel.cxx  TestSketchProject.cxx  TestStructureReplicator.cxx  TestTransformEquals.cxx  TestTransformManager.cxx  TestWorldManager.cxx  testSketchModel.cc  testSketchObject.cc  testSketchProject.cc  testStructureReplicator.cc  testTransformEquals.cc  testTransformManager.cc
CustomVtkFilters/: CMakeLists.txt  vtkGiftRibbonSource.cxx  vtkGiftRibbonSource.h  vtkProjectToPlane.h  vtkVRMLWriter.cxx  vtkVRMLWriter.h
CustomVtkFilters/test/: CMakeLists.txt  testGiftRibbonSource.cc  testProjectToPlane.cc  testVRMLWriter.cc
Export/: CMakeLists.txt  FlorosimExportBottomOfFile.h  FlorosimExportTopOfFile.h  ProjectToFlorosim.cpp  ProjectToFlorosim.h  projecttoblenderanimation.cpp  projecttoblenderanimation.h  projecttoxml.cpp  projecttoxml.h
Export/scripts/: mybpyhelpers.py
Export/test/: CMakeLists.txt  CompareBeforeAndAfter.cxx  CompareBeforeAndAfter.h  MakeTestProject.cxx  MakeTestProject.h  TestProjectToXMLCopyPaste.cxx  TestProjectToXMLSave.cxx  testProjectToXML.cc
Input/: CMakeLists.txt  InputManager.cpp  InputManager.h  TransformInputDialog.cpp  TransformInputDialog.h  animationmode.cpp  animationmode.h  coloreditingmode.cpp  coloreditingmode.h  controlFunctions.cpp  controlFunctions.h  groupeditingmode.cpp  groupeditingmode.h  hydrainputmanager.cpp  hydrainputmanager.h  hydrainputmode.cpp  hydrainputmode.h  objecteditingmode.cpp  objectgrabmode.cpp  objectgrabmode.h  savedxmlundostate.cpp  savedxmlundostate.h  signalemitter.h  springeditingmode.cpp  springeditingmode.h  transformeditingmode.cpp  transformeditingmode.h  transformeditoperationstate.cpp  transformeditoperationstate.h  vrpnserver.cpp  vrpnserver.h
Input/test/: CMakeLists.txt  TestAnalogFunctions.cxx  TestAnimationFunctions.cxx  TestColorFunctions.cxx  TestGlobalControls.cxx  TestGrabFunctions.cxx  TestGroupFunctions.cxx  TestSpringFunctions.cxx  TestTransformFunctions.cxx  TestUtilityFunctions.cxx
Subprocess/: CMakeLists.txt  abstractsingleprocessrunner.cpp  abstractsingleprocessrunner.h  blenderanimationrunner.cpp  blenderanimationrunner.h  blenderdecimationrunner.cpp  blenderdecimationrunner.h  chimeraobjmaker.cpp  chimeraobjmaker.h  chimeravtkexportrunner.cpp  chimeravtkexportrunner.h  modelfrompdbrunner.cpp  modelfrompdbrunner.h  pymolobjmaker.cpp  subprocessutils.cpp  subprocessutils.h
Subprocess/chimeraExtension/ExportVTK/: ChimeraExtension.py  __init__.py
Subprocess/test/: CMakeLists.txt  testBlenderAnimationRunner.cc  testBlenderDecimationRunner.cc  testChimeraObjMaker.cc  testChimeraVTKExportRunner.cc  testModelFromPdbRunner.cc  testqt.h
Subprocess/test/resources/testproj/: 1qkr-a.vtk  1qkr-a_isosurface.vtk  CAMERA.vtk  project.xml
cmake/: FindPQP.cmake
device_config_files/: README.md  hodgepodge.cfg  hydra.cfg  razer_hydra.xml  test.xml
installer/: CMakeLists.txt
installer/MacOSX/: Info.plist  startup.sh
installer/MacOSX/CMake/: MacOSXPackage.txt
installer/Win32/: icon.rc
installer/Win32/CMake/: NSIS.template.in  (+1 more)
installer/licenses/: README.txt  SketchBio_license.txt
models/: 1m1j.mtl
paper_tex_source/: .gitignore  paper_prp.tex  paper_working.tex  sources.bib
paper_tex_source/BioVis_BMC_template/: bmc_article.bbl  bmc_article.blg  bmc_article.tex  bmc_article_sketchbio.tex  journal_response.docx  journal_response_round_2.docx  sources.bib  system_diagram.ppt
paper_tex_source/prp/: paper_prp.tex  sources.bib
scripts/: get_pdb_file.bash  get_pdb_file.py  get_pdb_surface.bash  get_pdb_surface.py  simplify.py
subprocesses/: CMakeLists.txt  abstractsingleprocessrunner.cpp  abstractsingleprocessrunner.h  blenderanimationrunner.cpp  blenderanimationrunner.h  blenderdecimationrunner.cpp  blenderdecimationrunner.h  chimeraobjmaker.cpp  chimeraobjmaker.h  modelfrompdbrunner.cpp  modelfrompdbrunner.h  pymolobjmaker.cpp  pymolobjmaker.h  subprocessrunner.h  subprocessutils.cpp  subprocessutils.h
subprocesses/test/: CMakeLists.txt  testBlenderDecimate.cc  testChimera.cc  testModelFromPDB.cc  testqt.cpp  testqt.h
test/: CMakeLists.txt  runTests.sh  sketchbio_nightly.cmake  testObjectGroups.cc  testPQPDeform.cc  testReplicatedObjects.cc  testSaveToXML.cc  testSketchModel.cc  testTransformEquals.cc  testTransformManager.cc
test/resources/saveTest2/: project.xml
vtk_custom_filters/: CMakeLists.txt  vtkProjectToPlane.cxx
vtk_custom_filters/test/: CMakeLists.txt  testProjectToPlane.cc
